tests/wordpress/fail/plugins/zingiri-web-shop/zingiri_webshop.php
<?php
/*
 Plugin Name: Zingiri Web Shop
 Plugin URI: http://www.zingiri.com/web-shop
 Description: Zingiri Web Shop is a Wordpress plugin that adds fantastic ecommerce capabilities to a great content management system.
 Author: Zingiri
 Version: 2.2.3
 Author URI: http://www.zingiri.com/
 */
